[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw2img"
version = "0.4.1"
description = "Render tweets as PNG/JPG images using Playwright"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "playwright",
]

[project.scripts]
tw2img = "tw2img:main"
article2img = "article2img:main"
tw2img-install-config = "tw2img_post_install:install_config"

[tool.setuptools]
py-modules = ["tw2img", "article2img", "tw2img_post_install"]

[tool.setuptools.package-data]
"*" = ["tw2img.conf"]
